# OnlineVoting2k26

./: .gitignore  DEPLOYMENT.md  Procfile  README.md  SMS_SETUP.md  create_admin.py  db.sqlite3  manage.py  pyproject.toml  quick_sms_test.py  requirement.txt  requirements.txt  test_sms_integration.py  wsgi.py
Onlinevoting2026/: .gitignore  README.md  admin.py  asgi.py  models.py  serializers.py  settings.py  sms_utils.py  urls.py  views.py  wsgi.py
Onlinevoting2026/migrations/: 0001_initial.py  0002_alter_candidate_unique_together_candidate_manifesto_and_more.py
Onlinevoting2026/static/css/: admin_panel.css  candidate_panel.css  landing_page.css  login.css  profile.css  registration.css  voter_panel.css
Onlinevoting2026/static/js/: admin-panel.js  candidate_panel.js  landing_page.js  login.js  profile.js  registration.js  voter_panel.js
Onlinevoting2026/templates/: admin_login.html  admin_panel.html  candidate_panel.html  landing_page.html  login.html  profile.html  registration.html  voter_panel.html
