[project]
name = "onlinevoting2026"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.9.2",
    "colorama==0.4.6",
    "Django==5.2.6",
    "pillow==11.3.0",
    "qrcode==8.2",
    "sqlparse==0.5.3",
    "tzdata==2025.2"
]

[project.scripts]
app = "Onlinevoting2026.wsgi:application"

[tool.vercel]
framework = "django"
